@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+- Clarify which of List::Util and List::MoreUtils wins when they both provide
+  the same function. Requested by Karen Etheridge. RT #98560.
+
+
 0.08    2014-04-01
 
 - This version now works with both List::MoreUtils 0.28-0.33 and the latest
